signUp page is done

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -57,7 +57,11 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background: url("./signUp/img.jpg") ;
+  background-repeat:no-repeat ;
+  background-position: center;
+  background-size: cover;
+    
   }
   a:hover {
     color: #747bff;
