--- a/front/src/signUp/style.css
+++ b/front/src/signUp/style.css
@@ -4,14 +4,6 @@
   font-family: "Poppins", sans-serif;
 }
 
-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  width: 100%;
-}
-
 .form-box {
   position: relative;
   width: 400px;
@@ -23,11 +15,13 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 30px 10px;
+  font-size: large;
 }
 
 h2 {
   font-size: 2em;
-  color: #fff;
+  color: hsl(0, 0%, 100%);
   text-align: center;
 }
 
@@ -110,6 +104,7 @@ button {
   height: 40px;
   border-radius: 40px;
   background: #fff;
+  color: hsl(236, 46%, 24%);
   border: none;
   outline: none;
   cursor: pointer;
