--- a/front/src/NewMail/newMail.css
+++ b/front/src/NewMail/newMail.css
@@ -1,13 +1,14 @@
 .form-container {
-    position: absolute;
-    bottom: 20px; /* Adjust spacing as needed */
-    left: 20px;   /* Adjust spacing as needed */
+    position: fixed;
+    display: inline;
+    bottom: 10px; /* Adjust spacing as needed */
+    right: 8px;   /* Adjust spacing as needed */
     background-color: #f4faff; /* Matching the email list background color */
     border: 2px solid #cce7ff; /* Slight border for clarity */
     border-radius: 8px;
     padding: 15px 15px;
-    width: 400px; /* Adjust size as needed */
-    height: 400px;
+    width: 450px; /* Adjust size as needed */
+    height: 450px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Light shadow for effect */
   }
   
@@ -21,10 +22,16 @@
   .form-container input {
     width: 100%;
     padding: 8px;
-    max-width: 388px;
+    max-width: 440px;
     margin-bottom: 10px;
     border: 1px solid #cce7ff;
     border-radius: 4px;
     font-size: 14px;
+  }
+  textarea{
+    resize: none;
+  }
+  .form-container button:hover{
+    background-color: #f4faff;
   }
   
