--- a/front/src/index.css
+++ b/front/src/index.css
@@ -8,7 +8,7 @@
   background-size: cover; 
 }
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -49,4 +49,4 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+ */
