--- a/front/src/style.css
+++ b/front/src/style.css
@@ -3,6 +3,47 @@
   padding: 0;
   font-family: "Poppins", sans-serif;
 }
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  justify-content: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
 
 .form-box {
   position: relative;
@@ -99,7 +140,7 @@ input:valid ~ label {
   text-decoration: underline;
 }
 
-button {
+/* button {
   width: 100%;
   height: 40px;
   border-radius: 40px;
@@ -110,7 +151,7 @@ button {
   cursor: pointer;
   font-size: 1em;
   font-weight: 600;
-}
+} */
 
 .register {
   font-size: 0.9em;
