--- a/front/src/index.css
+++ b/front/src/index.css
@@ -2,7 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  background: url("./signUp/img.jpg") ;
+  background: url("./img.jpg") ;
   background-repeat:no-repeat ;
   background-position: center;
   background-size: cover; 
