--- a/front/src/style.css
+++ b/front/src/style.css
@@ -140,7 +140,7 @@ input:valid ~ label {
   text-decoration: underline;
 }
 
-/* button {
+button {
   width: 100%;
   height: 40px;
   border-radius: 40px;
@@ -151,7 +151,7 @@ input:valid ~ label {
   cursor: pointer;
   font-size: 1em;
   font-weight: 600;
-} */
+} 
 
 .register {
   font-size: 0.9em;
