add file to get mails from backend but still need to be modified and some css convert the headers of the table into button

--- a/front/src/EmailTable/email.css
+++ b/front/src/EmailTable/email.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   left :320px;
+  top: 20px;
   min-height: 800px;
   position: fixed;
   /* max-width: 800px; Adjust the width to fit your content */
@@ -25,6 +26,10 @@
   }
   
   thead {
+    background-color: #007bff;
+    color: #fff;
+  }
+  .thead {
     background-color: #007bff;
     color: #fff;
   }
