--- a/front/src/NewMail/newMail.css
+++ b/front/src/NewMail/newMail.css
@@ -10,6 +10,7 @@
     width: 450px; /* Adjust size as needed */
     height: 450px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Light shadow for effect */
+    z-index: 20;
   }
   
   .form-container label {
