--- a/front/src/IsTable/EmailTable.css
+++ b/front/src/IsTable/EmailTable.css
@@ -3,14 +3,15 @@
 .tableContainer {
     position: absolute; /* Position it independently of other elements */
     top: 65px; /* Space from the top of the page */
-    left: 59.6%; /* Center horizontally */
+    left: 60%; /* Center horizontally */
     transform: translateX(-50%); /* Ensure it's perfectly centered */
-    width: 75%; /* Full width */
+    width: 78%; /* Full width */
     max-width: 100%; /* Control the width of the search bar and results */
     display: flex;
     flex-direction: column;
     align-items: center;
     min-width: 200px;
+    font-family: Arial, Helvetica, sans-serif;
     padding: 0 15px;
     overflow-x: hidden;
     z-index: 10; /* Ensure it stays on top */
@@ -35,7 +36,7 @@
 .search-bar-container {
     position: absolute; /* Position it independently of other elements */
     top: 20px; /* Space from the top of the page */
-    left: 38%; /* Center horizontally */
+    left: 37%; /* Center horizontally */
     transform: translateX(-50%); /* Ensure it's perfectly centered */
     width: 100%; /* Full width */
     max-width: 30%; /* Control the width of the search bar and results */
@@ -108,7 +109,7 @@
 
 /* Timestamp Text */
 .timestamp-text {
-  margin-right: 10px;
+  margin-right: 50px;
 }
 
 /* Icons Container */
@@ -123,6 +124,7 @@
   color: gray;
   cursor: pointer;
   transition: color 0.2s ease;
+  font-size: 15px;
 }
 
 .timestamp-icons .icon:hover {
