--- a/front/src/EmailPage/EmailPage.css
+++ b/front/src/EmailPage/EmailPage.css
@@ -3,7 +3,7 @@
   background-color: #f1f3f4;
   margin: 0 auto;
   padding: 20px;
-  width: 70%;
+  width: fit-content;
   max-width: 100%;
   height: 80%;
   max-height: 100%;
