--- a/front/src/NewMail/newMail.css
+++ b/front/src/NewMail/newMail.css
@@ -31,6 +31,13 @@
   }
   textarea{
     resize: none;
+    width: 100%;
+    padding: 8px;
+    max-width: 440px;
+    margin-bottom: 10px;
+    border: 1px solid #cce7ff;
+    border-radius: 4px;
+    font-size: 14px;
   }
   .form-container button:hover{
     background-color: #f4faff;
