--- a/front/src/EmailPage/EmailPage.css
+++ b/front/src/EmailPage/EmailPage.css
@@ -3,14 +3,14 @@
   background-color: #f1f3f4;
   margin: 0 auto;
   padding: 20px;
-  width: fit-content;
+  width: 70%;
   max-width: 100%;
-  height: 80%;
+  height: 85%;
   max-height: 100%;
   border-radius: 8px;
-  position: relative;
+  position: absolute;
   top: 50px;
-  left: 120px;
+  left: 350px;
 }
 
 .email-header {
@@ -85,6 +85,8 @@
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin-top: 10px;
+  height: 80%;
+  overflow-y: scroll;
 }
 
 .email-subject h2 {
