Adding some styling

--- a/front/src/EmailPage/AttachmentCard.css
+++ b/front/src/EmailPage/AttachmentCard.css
@@ -4,6 +4,8 @@
     flex-wrap: wrap;
     gap: 10px;
     margin-top: 10px;
+    height : 25%;
+    overflow-y: scroll;
   }
   
   /* Individual Attachment Card */
