--- a/front/src/EmailPage/AttachmentCard.css
+++ b/front/src/EmailPage/AttachmentCard.css
@@ -5,7 +5,7 @@
     gap: 10px;
     margin-top: 10px;
     height : 25%;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
   
   /* Individual Attachment Card */
@@ -17,6 +17,7 @@
     background-color: #f9f9f9;
     padding: 8px 12px;
     gap: 10px;
+    height: 50px;
     min-width: 200px;
     box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease, box-shadow 0.2s ease;
@@ -83,6 +84,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    height : 50%;
     background-color: #f8f9fa;
     border: 1px dashed #d6d6d6;
     border-radius: 6px;
