--- a/front/src/EmailPage/EmailPage.css
+++ b/front/src/EmailPage/EmailPage.css
@@ -86,7 +86,7 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin-top: 10px;
   height: 60%;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .email-subject h2 {
