Search w.r.t different fields , adding the functions for icons inside the email page

--- a/front/src/EmailPage/EmailPage.css
+++ b/front/src/EmailPage/EmailPage.css
@@ -74,6 +74,15 @@
   cursor: pointer;
   transition: color 0.2s ease-in-out;
 }
+.iconstarred {
+  color: gold; /* Starred */
+  font-size: 20px;
+}
+
+.iconstarred:hover {
+  color: #0056b3;
+  font-size: 20px;
+}
 
 .icon:hover {
   color: #007bff; /* Highlight color on hover */
