--- a/front/src/EmailTable/EmailTable.css
+++ b/front/src/EmailTable/EmailTable.css
@@ -114,7 +114,7 @@
 /* Icons Container */
 .timestamp-icons {
   display: flex;
-  gap: 20px;
+  gap: 15px;
   visibility: hidden; /* Initially hidden */
 }
 
@@ -259,4 +259,76 @@
 
 .attachment-icon:hover {
   color: #007bff;
+}
+
+
+.search-buttons-container {
+  position: absolute;
+  left: 100%;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-left: 80px;
+}
+
+.search-button {
+  padding: 5px 10px;
+  border: none;
+  background-color: #e7e6e6; /* Light gray background */
+  color: black; /* White text */
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.search-button.selected {
+  outline: 2px solid #666; /* Darker gray outline for selected state */
+  background-color: #e7e6e6; /* Lighter gray for selected button */
+  color: black; /* Dark gray text */
+}
+
+.search-button:hover {
+  background-color: #999; /* Medium gray on hover */
+}
+
+.search-bar-container .search-buttons-container {
+  margin-left: auto;
+}
+
+
+/* Individual button styling */
+.button-container .action-button {
+  padding: 5px 10px;
+  width: 140px; 
+  font-size: 14px;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  color: black; /* Text color */
+  outline: none;
+}
+
+/* Add to Favorites button */
+.button-container .favorite-button {
+  background-color: #e7e6e6; /* Very light gray background */
+}
+
+.button-container .favorite-button:hover {
+  background-color: #b0d6d6f2; /* Keep the same light gray on hover */
+}
+
+/* Add to Trash button */
+.button-container .trash-button {
+  background-color: #e7e6e6; /* Very light gray background */
+}
+
+.button-container .trash-button:hover {
+  background-color: #b0d6d6f2; /* Keep the same light gray on hover */
+}
+
+
+.button-container .action-button:active {
+  background-color: #d1e0e0; /* Darker gray when clicked */
+  transform: scale(0.96); /* Slight shrinking effect */
 }
