--- a/front/src/UserFolder/userFolder.css
+++ b/front/src/UserFolder/userFolder.css
@@ -3,10 +3,10 @@
     flex-direction: column;
     left :320px;
     top: 20px;
-    min-height: 800px;
+    min-height: 750px;
     position: fixed;
-    min-width: 1460px;
-    margin: 50px auto; 
+    min-width: 1260px;
+    margin: 20px 20px; 
     padding: 20px;
     background-color: rgba(255, 255, 255, 0.9); /* Transparent background for readability */
     border-radius: 8px;
@@ -19,14 +19,15 @@
 }
 .updatePhoto{
     position: absolute;
-    right: 80px;
+    right: 50px;
     top: 70px;
-    padding: 10px;
-    margin-top: 20px;
+    padding: 30px;
+    margin: 20px 0px;
     background-color: Transparent; 
     color: #007bff;
-    border: none;
-    border-radius: 4px;
+    border: 5px solid #ffffff;
+    border-radius: 80px;
+    background-color: #ffffffac;
     cursor: pointer;
     font-size: 16px;
 
@@ -80,7 +81,7 @@
     display: block;
     width: 100%;
     padding: 10px;
-    margin-top: 20px;
+    margin-top: 100px;
     background-color: #007bff; 
     color: #fff;
     border: none;
@@ -114,7 +115,7 @@
     border: none;
     width: 80%;
     border-radius: 8px;
-    background-color: rgba(255, 255, 255, 0.9);;
+    background-color: rgba(255, 255, 255, 0.9);
 }
 .return{
     position: fixed;
@@ -133,8 +134,8 @@
 .delAcc{
     display: block;
     position: absolute;
-    bottom: 10px ;
-    right: 10px;
+    bottom: 30px ;
+    right: 30px;
     width: 20%;
     padding: 10px;
     margin-top: 20px;
@@ -148,5 +149,6 @@
 .delAcc:hover{
     background-color: #c70000;
 }
+
 
 
